# Kiosco_Cinemex_Showroom

./: .gitignore  DESPLIEGUE_KIOSCO.md  GUIA_PRUEBAS.md  PRD.md  UI_GUIDELINES.md  certificado_cpi.crt  integracion_cpi.md  integracion_im30.md  integracion_impresora.md
.cursor/plans/: kiosco_cinemex_implementación_0a1b74ed.plan.md
app/: .env.example  README.md  api_routes.py  config_loader.py  logging_setup.py  main.py  pyproject.toml  requirements.txt  settings.py  transaction_state.json
app/config/: catalog.json  prod.yaml
app/core/: error_handler.py  state.py  watchdog.py
app/services/: cpi_service.py  im30_service.py  mqtt_service.py  printer_service.py  transaction_service.py
app/ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/ui/electron/: main.cjs  preload.cjs
app/ui/src/: App.tsx  KioskApp.css  KioskApp.tsx  main.tsx  theme.css
app/ui/src/components/: ErrorBoundary.css  ErrorBoundary.tsx  InactivityModal.css  InactivityModal.tsx  SummaryModal.css  SummaryModal.tsx
app/ui/src/hooks/: useInactivityTimer.ts  useMotionConfig.ts  useQRScanner.ts
app/ui/src/lib/: im30ErrorCatalog.ts
app/ui/src/screens/: CardPaymentScreen.css  CardPaymentScreen.tsx  CashPaymentScreen.css  CashPaymentScreen.tsx  CatalogScreen.css  CatalogScreen.tsx  PaymentMethodScreen.css  PaymentMethodScreen.tsx  PaymentSuccessScreen.css  PaymentSuccessScreen.tsx  QrScanScreen.css  QrScanScreen.tsx  WelcomeScreen.css  WelcomeScreen.tsx
app/ui/src/services/: api.ts
app/ui/src/store/: kioskStore.ts
